Fixed: column shifting in bootstrap, removed the 'container' class

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,17 +51,6 @@ body {
 	font-weight: 100;
 }
 
-.container {
-	width: 50%;
-	max-width: 750px;
-	background: $white_opaque;
-	margin: 3em auto 0 auto;
-	border-radius: 7px;
-	-webkit-box-shadow: 0 0 4px 3px rgba(0,0,0,.3);
-	box-shadow: 0 0 4px 4px rgba(0,0,0,.03);
-	padding: 1em 0;
-}
-
 .todo_list_title {
 	text-align: center;
 	font-weight: 700;
